[project]
name = "vinted-hunter"
version = "0.1.0"
description = "Vinted Hunter"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv",
    "loguru",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]